--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
       font-weight: bold;
     }
 
+    .about-img {
+      display: block;
+      margin: 20px auto;
+      border-radius: 50%;
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+    }
+
     footer {
       text-align: center;
       padding: 2em;
@@ -112,7 +121,12 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I'm Jay Rivera, a sales licensing specialist with a passion for machine learning, data analytics, and creating smart tools using cutting-edge technologies. I have hands-on experience with Python and data visualization, and I'm working on machine learning projects using real-world data to solve business challenges.</p>
+    <!-- Placeholder for your picture -->
+    <img src="your-picture.jpg" alt="Jay Rivera" class="about-img">
+    <p>Thank you for visiting my portfolio! Here, you’ll find some of my favorite projects and the exciting work I’m currently diving into.</p>
+    <p>I’m Jay Rivera, a Data Scientist with a passion for machine learning, data analytics, and model development. My focus is on using data to unlock actionable insights and craft impactful solutions, particularly in predictive modeling for customer behavior and personalized experiences. At the moment, I’m immersed in advanced machine learning projects, including developing models that help identify high-value customer personas from data.</p>
+    <p>I hold a degree in Computer Science, specializing in machine learning, and have developed strong expertise in Python and data visualization tools. I’m always seeking new ways to enhance model accuracy and scalability, staying on top of the latest advancements in the field. When I’m not immersed in data, I’m exploring the outdoors in my camper or experimenting with new recipes in the kitchen.</p>
+    <p>Feel free to connect with me on <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>!</p>
   </section>
 
   <section id="projects">
