--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <!-- Placeholder for your picture -->
+    <img src="https://drive.google.com/file/d/173tL1fOdqybWsthcY9DFRGyhQJ099BQu/view?usp=sharing"><!-- Placeholder for your picture -->
     <img src="your-picture.jpg" alt="Jay Rivera" class="about-img">
     <p>Thank you for visiting my portfolio! Here, you’ll find some of my favorite projects and the exciting work I’m currently diving into.</p>
     <p>I’m Jay Rivera, a Data Scientist with a passion for machine learning, data analytics, and model development. My focus is on using data to unlock actionable insights and craft impactful solutions, particularly in predictive modeling for customer behavior and personalized experiences. At the moment, I’m immersed in advanced machine learning projects, including developing models that help identify high-value customer personas from data.</p>
