--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <section id="about">
     <h2>About Me</h2>
     <img src="https://drive.google.com/file/d/173tL1fOdqybWsthcY9DFRGyhQJ099BQu/view?usp=sharing"><!-- Placeholder for your picture -->
-    <img src="your-picture.jpg" alt="Jay Rivera" class="about-img">
+    <img src="https://drive.google.com/file/d/173tL1fOdqybWsthcY9DFRGyhQJ099BQu/view?usp=sharing" alt="Jay Rivera" class="about-img">
     <p>Thank you for visiting my portfolio! Here, you’ll find some of my favorite projects and the exciting work I’m currently diving into.</p>
     <p>I’m Jay Rivera, a Data Scientist with a passion for machine learning, data analytics, and model development. My focus is on using data to unlock actionable insights and craft impactful solutions, particularly in predictive modeling for customer behavior and personalized experiences. At the moment, I’m immersed in advanced machine learning projects, including developing models that help identify high-value customer personas from data.</p>
     <p>I hold a degree in Computer Science, specializing in machine learning, and have developed strong expertise in Python and data visualization tools. I’m always seeking new ways to enhance model accuracy and scalability, staying on top of the latest advancements in the field. When I’m not immersed in data, I’m exploring the outdoors in my camper or experimenting with new recipes in the kitchen.</p>
