--- a/index.html
+++ b/index.html
@@ -4,108 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jay Rivera | Portfolio</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #0F0F0F;
-      color: #F1F1F1;
-      scroll-behavior: smooth;
-    }
-
-    nav {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background-color: rgba(0, 0, 0, 0.85);
-      display: flex;
-      justify-content: center;
-      padding: 1em;
-      z-index: 1000;
-    }
-
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-      margin: 0 15px;
-      transition: color 0.3s ease;
-    }
-
-    nav a:hover {
-      color: #1ABC9C;
-    }
-
-    header {
-      height: 100vh;
-      background: linear-gradient(to right, #0F2027, #203A43, #2C5364);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 0 20px;
-    }
-
-    header h1 {
-      font-size: 5em;
-      margin: 0;
-      font-weight: bold;
-    }
-
-    header p {
-      font-size: 1.5em;
-      color: #ddd;
-      margin-top: 10px;
-    }
-
-    section {
-      padding: 100px 20px 60px;
-      max-width: 800px;
-      margin: auto;
-    }
-
-    h2 {
-      text-align: center;
-      color: #1ABC9C;
-      margin-bottom: 20px;
-      font-size: 2.5em;
-      font-weight: 600;
-    }
-
-    p {
-      font-size: 1.2em;
-      line-height: 1.6;
-      color: #ddd;
-    }
-
-    a {
-      color: #1ABC9C;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .about-img {
-      display: block;
-      margin: 20px auto;
-      border-radius: 50%;
-      width: 150px;
-      height: 150px;
-      object-fit: cover;
-    }
-
-    footer {
-      text-align: center;
-      padding: 2em;
-      color: #888;
-      font-size: 1em;
-      background-color: #0F0F0F;
-    }
-
-    footer a {
-      color: #1ABC9C;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <nav>
@@ -119,27 +18,54 @@
     <p>Software Licensing Specialist | ML Enthusiast | Builder</p>
   </header>
 
- <section id="about">
-  <h2>About Me</h2>
-  <img src="https://i.imgur.com/z21xahk.jpeg" alt="Jay Rivera" class="about-img">
-  <p>Thank you for visiting my portfolio! Here, you’ll find some of my favorite projects and the exciting work I’m currently diving into.</p>
-  <p>I’m Jay Rivera, a Data Scientist with a passion for machine learning, data analytics, and model development. My focus is on using data to unlock actionable insights and craft impactful solutions, particularly in predictive modeling for customer behavior and personalized experiences. At the moment, I’m immersed in advanced machine learning projects, including developing models that help identify high-value customer personas from data.</p>
-  <p>I hold a degree in Computer Science, specializing in machine learning, and have developed strong expertise in Python and data visualization tools. I’m always seeking new ways to enhance model accuracy and scalability, staying on top of the latest advancements in the field. When I’m not immersed in data, I’m exploring the outdoors in my camper or experimenting with new recipes in the kitchen.</p>
-  <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/jayrivera1994/" target="_blank">LinkedIn</a>!</p>
-</section>
+  <section id="about">
+    <h2>About Me</h2>
+    <img src="<img src="https://i.imgur.com/z21xahk.jpeg" alt="Jay Rivera" class="about-img">" alt="Jay Rivera" class="about-img">
+    <p id="about-text"></p>
+  </section>
 
   <section id="projects">
     <h2>Projects</h2>
-    <p>Currently, I'm building a machine learning model to identify key customer personas from Salesforce data. This project leverages advanced techniques such as classification and clustering to improve sales strategies and customer targeting.</p>
+    <div id="projects-container"></div>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Feel free to reach out to me for collaborations or inquiries. You can email me at: <a href="mailto:jayrivera@example.com">jayrivera@example.com</a></p>
+    <p id="contact-text"></p>
   </section>
 
   <footer>
     <p>&copy; 2025 Jay Rivera. All rights reserved. | <a href="mailto:jayrivera@example.com">Contact me</a></p>
   </footer>
+
+  <script src="data.js"></script>
+  <script>
+    // Load and populate the data dynamically from the JSON file
+    fetch('data.json')
+      .then(response => response.json())
+      .then(data => {
+        // Populate About Section
+        document.getElementById('about-text').innerText = data.about.description;
+
+        // Populate Projects Section
+        const projectsContainer = document.getElementById('projects-container');
+        data.projects.forEach(project => {
+          const projectDiv = document.createElement('div');
+          projectDiv.classList.add('project');
+          projectDiv.innerHTML = `
+            <h3>${project.title}</h3>
+            <p>${project.description}</p>
+            <a href="${project.link}" target="_blank">View Project</a>
+          `;
+          projectsContainer.appendChild(projectDiv);
+        });
+
+        // Populate Contact Section
+        document.getElementById('contact-text').innerHTML = `
+          Feel free to reach out to me for collaborations or inquiries. You can email me at: 
+          <a href="mailto:${data.contact.email}">${data.contact.email}</a>
+        `;
+      });
+  </script>
 </body>
 </html>
