--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <img src="<img src="https://i.imgur.com/z21xahk.jpeg" alt="Jay Rivera" class="about-img">" alt="Jay Rivera" class="about-img">
+    <img src="https://i.imgur.com/your-image-id.jpg" alt="Jay Rivera" class="about-img">
     <p id="about-text"></p>
   </section>
 
