--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Jay Rivera. All rights reserved. | <a href="mailto:jayrivera@example.com">Contact me</a></p>
+    <p>&copy; 2025 Jay Rivera. All rights reserved. | <a href="mailto:jay.rivera1994@icloud.com">Contact me</a></p>
   </footer>
 
   <script src="data.js"></script>
