--- a/index.html
+++ b/index.html
@@ -112,21 +112,23 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I'm Jay Rivera, a sales licensing specialist with a passion for machine learning, data analytics, and creating smart tools using cutting-edge technologies. I have hands-on experience with Python and data visualization, and I'm working on machine learning projects using real-world data to solve business challenges.</p>
+    <p>Thank you for visiting my portfolio! Here, you’ll find some of my favorite projects and the exciting work I’m currently diving into.</p>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
-    <p>Currently, I'm building a machine learning model to identify key customer personas from Salesforce data. This project leverages advanced techniques such as classification and clustering to improve sales strategies and customer targeting.</p>
+    <p>I’m Jay Rivera, a Data Scientist with a passion for machine learning, data analytics, and model development. My focus is on using data to unlock actionable insights and craft impactful solutions, particularly in predictive modeling for customer behavior and personalized experiences. At the moment, I’m immersed in advanced machine learning projects, including developing models that help identify high-value customer personas from data.</p>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Feel free to reach out to me for collaborations or inquiries. You can email me at: <a href="mailto:jayrivera@example.com">jayrivera@example.com</a></p>
+    <p>I hold a degree in Computer Science, specializing in machine learning, and have developed strong expertise in Python and data visualization. I’m always seeking new ways to enhance model accuracy and scalability, staying on top of the latest advancements in the field. When I’m not immersed in data, I’m exploring the outdoors or experimenting with new recipes in the kitchen.
+
+Feel free to check out my GitHub [here], or connect with me on LinkedIn!</p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Jay Rivera. All rights reserved. | <a href="mailto:jayrivera@example.com">Contact me</a></p>
+    <p>&copy; 2025 Jay Rivera. All rights reserved. | <a href="mailto:jay.rivera1994@icloud.com">Contact me</a></p>
   </footer>
 </body>
 </html>
