--- a/index.html
+++ b/index.html
@@ -112,19 +112,17 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>Thank you for visiting my portfolio! Here, you’ll find some of my favorite projects and the exciting work I’m currently diving into.</p>
+    <p>Thank you for visiting my portfolio! Here, you’ll find some of my favorite projects and the exciting work I’m currently diving into. I’m Jay Rivera, a Data Scientist with a passion for machine learning, data analytics, and model development. My focus is on using data to unlock actionable insights and craft impactful solutions, particularly in predictive modeling for customer behavior and personalized experiences. At the moment, I’m immersed in advanced machine learning projects, including developing models that help identify high-value customer personas from data. I hold a degree in Computer Science, specializing in machine learning, and have developed strong expertise in Python and data visualization. I’m always seeking new ways to enhance model accuracy and scalability, staying on top of the latest advancements in the field. When I’m not immersed in data, I’m exploring the outdoors or experimenting with new recipes in the kitchen. Feel free to connect with me on LinkedIn! </p>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
-    <p>I’m Jay Rivera, a Data Scientist with a passion for machine learning, data analytics, and model development. My focus is on using data to unlock actionable insights and craft impactful solutions, particularly in predictive modeling for customer behavior and personalized experiences. At the moment, I’m immersed in advanced machine learning projects, including developing models that help identify high-value customer personas from data.</p>
+    <p></p>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>I hold a degree in Computer Science, specializing in machine learning, and have developed strong expertise in Python and data visualization. I’m always seeking new ways to enhance model accuracy and scalability, staying on top of the latest advancements in the field. When I’m not immersed in data, I’m exploring the outdoors or experimenting with new recipes in the kitchen.
-
-Feel free to check out my GitHub [here], or connect with me on LinkedIn!</p>
+    <p></p>
   </section>
 
   <footer>
