--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
   <section id="about">
     <h2>About Me</h2>
     <p>Thank you for visiting my portfolio! Here, you’ll find some of my favorite projects and the exciting work I’m currently diving into.</p>
-    <p>I’m Jay Rivera, a Data Scientist with a passion for machine learning, data analytics, and model development. My focus is on using data to unlock actionable insights and craft impactful solutions, particularly in predictive modeling for customer behavior and personalized experiences. At the moment, I’m immersed in advanced machine learning projects, including developing models that help identify high-value customer personas from data.</p>
-    <p>I have developed strong expertise in Python and data visualization. I’m always seeking new ways to enhance model accuracy and scalability, staying on top of the latest advancements in the field.</p>
-    <p>When I’m not immersed in data, I’m exploring the outdoors or experimenting with new recipes in the kitchen.</p>
+    <p>I’m Jay Rivera, a Data analyst. My focus is on using data to unlock actionable insights and craft impactful solutions</p>
+    <p>I have developed strong expertise in data visualization. to be continued</p>
+    <p>When I’m not immersed in data, I’m rewatching tv shows like harper's island, got, twd, and breaking bad</p>
     <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/jayrivera1994/" target="_blank">LinkedIn</a>!</p>
   </section>
 
